Add crypto package

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "base-project",
+  "name": "@thiagoveras/rsa-service",
   "version": "0.0.0",
-  "description": "base project with all conf files",
+  "description": "Encrypter and Decrypter package",
   "scripts": {
     "exe": "node scripts/make-executable.js",
     "format": "prettier --config ./.prettierrc --write \"./src/**/*.{ts,tsx,js,jsx,json}\"",
@@ -18,16 +18,17 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/VerasThiago/TypeScriptBaseProject.git"
+    "url": "git+https://github.com/VerasThiago/RsaService.git"
   },
   "author": "Thiago Veras Machado",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/VerasThiago/TypeScriptBaseProject/issues"
+    "url": "https://github.com/VerasThiago/RsaService/issues"
   },
-  "homepage": "https://github.com/VerasThiago/TypeScriptBaseProject#readme",
+  "homepage": "https://github.com/VerasThiago/RsaService#readme",
   "dependencies": {
     "@types/jest": "^26.0.3",
+    "crypto": "^1.0.1",
     "eslint": "^7.3.1",
     "eslint-config-vtex": "^12.6.0",
     "jest": "^26.1.0",
